# ComfyUI-Vaja-Ai4thai

./: README.md  __init__.py  nodes.py  pyproject.toml  showtext.py
.github/workflows/: publish.yml
Workflow/: Vaja with LatentSync.json
Workflow/input/: nam.mov
